[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Wakey-Wakey"
version = "1.0.0"
description = "Keep alive replit web servers"
authors = ["Peter1169 <peter1169tech@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"